--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -1,12 +1,12 @@
-.about-project {
-    padding: 110px 70px;
+.techs {
+    padding: 70px 100px;
+    background: #F5F5F5;
     text-align: start;
 }
 
-.about-project__title {
+.techs__title {
     color: #000;
     font-size: 22px;
-    font-family: Inter;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -14,37 +14,24 @@
     border-bottom: 1px solid rgba(54, 54, 54, .7);
 }
 
-
-
-.about-project__container {
-    display: flex;
-}
-
-
-
-.about-project__info {
-    max-width: 550px;
-}
-
-
-
-.about-project__info-title {
+.techs__subtitle {
     color: #000;
-    font-size: 20px;
-    font-family: Inter;
+    text-align: center;
+    font-size: 50px;
     font-style: normal;
     font-weight: 400;
-    line-height: normal;
-    letter-spacing: -0.8px;
+    line-height: 58px;
+    letter-spacing: -2px;
 }
 
-
-
-.about-project__info-text {
+.techs__text {
+    margin: 26px auto;
     color: #000;
+    text-align: center;
     font-size: 14px;
-    font-family: Inter;
     font-style: normal;
     font-weight: 400;
     line-height: 20px;
+    letter-spacing: -0.56px;
+    max-width: 460px;
 }
