--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
+@import url(./vendor/normalize.css);
+@import url(./vendor/fonts/inter.css);
+
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  margin: auto;
+  max-width: 1280px;
+  font-family: 'Inter',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
