--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,16 +1,16 @@
 .promo {
-    background: #073042;
+    padding: 0 40px;
     height: 524px;
-    background-image: url(../../images/Landing.svg);
     background-repeat: no-repeat;
     background-position: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 10px;
+    background: #F5F5F5;
 }
 
 .promo__title {
-    color: #FFF;
     text-align: center;
     font-size: 50px;
     font-family: Inter;
