--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,3 +1,64 @@
-.search-form {
+.search {
+    padding-bottom: 70px;
+    border-bottom: 1px solid #E8E8E8;
+
+}
+
+.search__container {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 9px;
+    background: #F9F9F9;
+    padding: 16px 30px 16px 19px;
+}
+
+.search__form {
+    display: flex;
+    align-items: center;
+    width: 80%;
+    border-right: 1px solid #E8E8E8;
+}
+
+.search__icon {
+    width: 34px;
+    height: 34px;
+    margin-right: 10px;
+    background: url(../../images/Find.png) center no-repeat;
+}
+
+.search__input {
+    font-size: 18px;
+    line-height: 20px;
+    background-color: #F9F9F9;
+    color: #8b8b8b;
+    outline: none;
+    border: none;
+    padding: 0;
+    width: 100%;
+    height: 72px;
+}
+
+.search__button {
+    padding: 0;
+    box-sizing: border-box;
+    width: 80px;
+    height: 34px;
+    border: none;
+    cursor: pointer;
+    background: url(../../images/search.svg) center no-repeat;
+    margin-right: 30px;
+}
+
+.search__toggle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search__text {
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
 }
