--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -35,8 +35,23 @@
     object-fit: cover;
 }
 
+.movie-card__button {
+    display: flex;
+    align-items: center;
+}
+
+.movie-card__button_delete {
+    background-image: url(../../images/delete-button.svg);
+    border: none;
+    border-radius: 30px;
+    width: 30px;
+    height: 30px;
+}
+
 .movie-card__button_active {
-background-image: url(../../images/Save-button.svg);
-width: 30px;
-height: 30px;
+    background-image: url(../../images/Save-button.svg);
+    border: none;
+    border-radius: 30px;
+    width: 30px;
+    height: 30px;
 }
