--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -68,3 +68,48 @@
     font-weight: 500;
     line-height: 17px;
 }
+
+@media (max-width:768px) {
+    .about-project {
+        padding: 90px 50px;
+    }
+}
+
+@media (max-width:430px) {
+    .about-project {
+        padding: 70px 18px;
+    }
+
+    .about-project__container_type_info {
+        flex-direction: column;
+    }
+
+    .about-project__info {
+        max-width: 300px;
+    }
+
+    .about-project__info-title {
+        margin: 60px 0 16px;
+        font-size: 18px;
+        letter-spacing: -0.72px;
+    }
+
+
+    .about-project__info-text {
+        margin: 0;
+        font-size: 11px;
+        line-height: 16px;
+    }
+
+    .timeline__title {
+        margin: 60px 0 0;
+        padding: 11px 0;
+        font-size: 11px;
+    }
+
+    .timeline__text {
+        margin: 10px 0 0;
+        font-size: 11px;
+        line-height: normal;
+    }
+}
