--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 0 0 10px 10px;
 }
 
 .navtab__link {
@@ -22,4 +23,22 @@
     font-weight: 500;
     line-height: 16px;
     margin-right: 40px;
+}
+
+.navtab__link:last-child {
+    margin-right: 0;
+}
+
+@media (max-width:430px) {
+    .navtab {
+        padding: 0 17px;
+        justify-content: space-between;
+    }
+
+    .navtab__link {
+        margin-right: 0;
+        font-size: 10px;
+        width: 82px;
+        height: 26px;
+    }
 }
