--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,22 +1,54 @@
 .promo {
-    padding: 0 40px;
+    padding: 20px 40px 0;
+}
+
+.promo__container {
     height: 524px;
     background-repeat: no-repeat;
     background-position: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 10px;
+    flex-direction: column;
+    border-radius: 10px 10px 0 0;
     background: #F5F5F5;
 }
 
 .promo__title {
     text-align: center;
     font-size: 50px;
-    font-family: Inter;
     font-style: normal;
     font-weight: 400;
     line-height: 58px;
     letter-spacing: -2px;
     max-width: 730px;
+}
+
+@media (max-width: 768px) {
+    .promo {
+        padding: 20px 20px 0;
+    }
+
+    .promo__container {
+        height: 834px;
+    }
+
+    .promo__title {
+        font-size: 40px;
+        line-height: 52px;
+        letter-spacing: -1.6px;
+        margin: 0;
+    }
+}
+
+@media (max-width: 360px) {
+    .promo__container {
+        height: 586px;
+    }
+
+    .promo__title {
+        font-size: 29px;
+        line-height: 37px;
+        letter-spacing: -1.16px;
+    }
 }
