--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,11 +1,19 @@
 .form {
+    padding: 70px 0;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     font-family: 'Inter', Arial, sans-serif;
-    justify-content: center;
     align-items: center;
-    margin: auto;
-    width: 400px;
+    text-align: start;
+    margin: 0;
+    height: 100vh;
+}
+
+.form__logo {
+    width: 46px;
+    height: 46px;
+    background: url(../../images/Logo.svg) no-repeat;
 }
 
 .form__title {
@@ -20,7 +28,25 @@
 .form__form {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
     width: 100%;
+    max-width: 400px;
+}
+
+.form__area {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+}
+
+.form__text {
+    margin: 0 0 5px;
+    color: #A0A0A0;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 .form__input {
@@ -33,6 +59,14 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
+}
+
+.form__error {
+    color: #EE3465;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 .form__extra-text {
@@ -57,8 +91,9 @@
 
 .form__submit {
     border-radius: 3px;
+    border: none;
     background: #2BE080;
-    margin: 70px 0 15px;
+    margin-bottom: 15px;
     height: 45px;
     cursor: pointer;
     color: #FFF;
@@ -67,4 +102,10 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+}
+
+@media (max-width: 450px) {
+    .form {
+        padding: 56px 30px 30px;
+    }
 }
