--- a/src/components/NotFoundPage/NotFoundPage.css
+++ b/src/components/NotFoundPage/NotFoundPage.css
@@ -33,3 +33,25 @@
     font-weight: 400;
     line-height: normal;
 }
+
+@media (max-width:768px) {
+    .not-found-page__link {
+        bottom: 222px;
+    }
+}
+
+@media (max-width:320px) {
+
+    .not-found-page__title {
+        font-size: 80px;
+    }
+
+    .not-found-page__text {
+        font-size: 12px;
+    }
+
+    .not-found-page__link {
+        font-size: 12px;
+        bottom: 30px;
+    }
+}
