--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,3 +1,15 @@
 .movies {
     padding: 0 70px;
 }
+
+@media (max-width:768px) {
+    .movies {
+        padding: 0 30px;
+    }
+}
+
+@media (max-width:400px) {
+    .movies {
+        padding: 0 10px;
+    }
+}
