--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -6,6 +6,18 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
-    column-gap: 30px;
-    row-gap: 24px;
+    gap: 30px;
+}
+
+@media (max-width:768px) {
+    .movies-list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width:500px) {
+    .movies-list {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 15px;
+    } 
 }
