--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -9,15 +9,14 @@
     justify-content: space-between;
     border-radius: 9px;
     background: #F9F9F9;
-    padding: 16px 30px 16px 19px;
-    height: 72px;
     box-sizing: border-box;
 }
 
 .search__form {
     display: flex;
     align-items: center;
-    width: 80%;
+    padding: 20px 30px 20px 20px;
+    width: 100%;
     border-right: 1px solid #E8E8E8;
 }
 
@@ -47,13 +46,14 @@
     border: none;
     cursor: pointer;
     background: url(../../images/search.svg) center no-repeat;
-    margin-right: 30px;
+    padding-right: 80px;
 }
 
 .search__toggle {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 26px 30px;
 }
 
 .search__text {
@@ -61,4 +61,85 @@
     font-style: normal;
     font-weight: 400;
     line-height: 18px;
+    margin: 0 0 0 15px;
+}
+
+.search__tumbler {
+    display: flex;
+    align-self: center;
+    position: relative;
+    width: 36px;
+    height: 20px;
+}
+
+.search__invisible-checkbox {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.search__visible-checkbox {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #2BE080;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    border-radius: 50px;
+    display: block;
+}
+
+.search__visible-checkbox::before {
+    position: absolute;
+    content: '';
+    height: 16px;
+    width: 16px;
+    left: 3px;
+    top: 2px;
+    background-color: #fff;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+.search__invisible-checkbox:checked+.search__visible-checkbox::before {
+    transform: translateX(15px);
+    background-color: #fff;
+}
+
+@media (max-width:768px) {
+    .search {
+        padding: 80px 0 110px;
+    }
+
+    .search__toggle {
+        padding: 26px 20px;
+    }
+
+    .search__form {
+        padding: 20px;
+    }
+}
+
+@media (max-width:500px) {
+    .search {
+        padding: 80px 0 0px;
+    }
+    .search__container {
+        flex-direction: column;
+        background: #FFF;
+    }
+
+    .search__form {
+        background: #F9F9F9;
+        border-radius: 9px;
+        border-right: none;
+    }
+
+    .search__toggle {
+        padding: 45px;
+    }
 }
