--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,14 +2,26 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     padding: 18px 70px;
 }
 
-.header_type_dark {
-    background: #073042;
+.header__logo {
+    height: 38px;
 }
 
 .header__menu-iten {
     color: black;
+}
+
+@media (max-width:768px) {
+    .header {
+        padding: 18px 30px;
+    }
+}
+
+@media (max-width:500px) {
+    .header {
+        padding: 20px;
+    }
 }
