--- a/src/components/MenuPopup/MenuPopup.css
+++ b/src/components/MenuPopup/MenuPopup.css
@@ -8,10 +8,12 @@
     transition-duration: 0.6s;
     background: rgba(0, 0, 0, .5);
     opacity: 0;
+    z-index: -1;
 }
 
 .menu-popup_opened {
     opacity: 1;
+    z-index: 1;
 }
 
 .menu-popup__content {
