--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -64,6 +64,11 @@
     line-height: 17px;
 }
 
+.form__input:focus {
+    outline:none;
+    border-bottom: 2px solid #2BE080;
+}
+
 .form__error {
     color: #EE3465;
     font-size: 10px;
@@ -110,5 +115,13 @@
 @media (max-width: 450px) {
     .form {
         padding: 56px 30px 30px;
+    }
+
+    .form__container {
+        text-align: center;
+    }
+
+    .form__title {
+        text-align: center;
     }
 }
