--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -30,14 +30,17 @@
 
 .movie-card__image {
     width: 100%;
-    height: 200px;
-    margin-bottom: 18px;
     object-fit: cover;
 }
 
 .movie-card__button {
     display: flex;
     align-items: center;
+    cursor: pointer;
+}
+
+.movie-card__button:hover {
+    opacity: .7;
 }
 
 .movie-card__button_delete {
