--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -49,6 +49,7 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.56px;
+    margin-left: 5px;
 }
 
 @media (max-width:840px) {
