--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,6 +1,7 @@
 .profile {
     padding: 74px 0 0;
     box-sizing: border-box;
+    z-index: 1;
 }
 
 .profile__title {
@@ -18,7 +19,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto 220px;
+    margin: 0 auto;
 }
 
 .profile__area {
@@ -39,6 +40,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    width: 80%;
 }
 
 .profile__text {
@@ -49,6 +51,7 @@
 }
 
 .profile__buttons {
+    margin-top: 220px;
     display: flex;
     flex-direction: column;
 }
@@ -66,6 +69,11 @@
     line-height: normal;
 }
 
+.profile__button_disabled {
+    cursor: default;
+    opacity: 0;
+}
+
 .profile__button_type_red-text {
     color: #EE3465;
 }
@@ -73,7 +81,7 @@
 @media (max-width: 768px) {
     .profile {
         padding: 236px 0 0;
-        
+
     }
 
     .profile__title {
@@ -81,14 +89,14 @@
         font-weight: 500;
     }
 
-    .profile__form {
-        margin: 0 auto 210px;
+    .profile__buttons {
+        margin-top: 210px;
     }
 }
 
 @media (max-width:440px) {
     .profile {
-        padding: 70px 30px 0; 
+        padding: 70px 30px 0;
     }
 
     .profile__title {
@@ -96,7 +104,7 @@
         font-weight: 500;
     }
 
-    .profile__form {
-        margin: 0 auto 380px;
+    .profile__buttons {
+        margin-top: 380px;
     }
 }
