--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -9,6 +9,27 @@
     gap: 30px;
 }
 
+.movies-list__button {
+    margin-bottom: 80px;
+    max-width: 320px;
+    width: 100%;
+    height: 36px;
+    border: solid #E8E8E8;
+    border-radius: 3px;
+    background: #FFF;
+    color: #000;
+    text-align: center;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.movies-list__button:hover {
+    cursor: pointer;
+    opacity: .6;
+}
+
 @media (max-width:768px) {
     .movies-list {
         grid-template-columns: repeat(2, 1fr);
@@ -19,5 +40,5 @@
     .movies-list {
         grid-template-columns: repeat(1, 1fr);
         gap: 15px;
-    } 
+    }
 }
